# bigconv

./: .gitignore  README.md  justfile  pixi.toml  pyproject.toml
src/bigconv/: distributed.py
src/bigconv/modules/: __init__.py  conv3d.py  norm.py  unet.py  unet_block.py
src/bigconv/ops/: __init__.py  _dist_utils.py  conv3d.py  conv_transpose3d.py  encoder_distribute.py  group_norm.py
src/bigconv/testing/: __init__.py  dist.py
tests/: test_test_helpers.py
tests/modules/: test_sync.py  test_unet.py  test_unet_model.py
tests/ops/: test_conv3d.py  test_conv_transpose3d.py  test_encoder_distribute.py  test_group_norm.py
